# saldo-positivo-api/src/main/java/br/com/saldo/positivo/swagger/api/TitulosApi.java
@@ -29,79 +29,72 @@ import java.io.IOException;
 import java.util.List;
 import java.util.Map;
 import java.util.Optional;
-@javax.annotation.Generated(value = "io.swagger.codegen.v3.generators.java.SpringCodegen", date = "2019-06-16T21:10:59.863-03:00[America/Sao_Paulo]")
+
+@javax.annotation.Generated(value = "io.swagger.codegen.v3.generators.java.SpringCodegen", date = "2019-06-17T19:17:34.294-03:00[America/Sao_Paulo]")
 @Api(value = "titulos", description = "the titulos API")
 public interface TitulosApi {
 
-    Logger log = LoggerFactory.getLogger(TitulosApi.class);
+	Logger log = LoggerFactory.getLogger(TitulosApi.class);
 
-    default Optional<ObjectMapper> getObjectMapper() {
-        return Optional.empty();
-    }
+	default Optional<ObjectMapper> getObjectMapper() {
+		return Optional.empty();
+	}
 
-    default Optional<HttpServletRequest> getRequest() {
-        return Optional.empty();
-    }
+	default Optional<HttpServletRequest> getRequest() {
+		return Optional.empty();
+	}
 
-    default Optional<String> getAcceptHeader() {
-        return getRequest().map(r -> r.getHeader("Accept"));
-    }
+	default Optional<String> getAcceptHeader() {
+		return getRequest().map(r -> r.getHeader("Accept"));
+	}
 
-    @ApiOperation(value = "Serviço para realizar lançamentos de despesas do mes", nickname = "deleteLancamentosTitulo", notes = "", tags={ "Titulos", })
-    @ApiResponses(value = { 
-        @ApiResponse(code = 200, message = "Sucesso") })
-    @RequestMapping(value = "/titulos/lancamento/{id}",
-        method = RequestMethod.DELETE)
-    default ResponseEntity<Void> deleteLancamentosTitulo(@ApiParam(value = "",required=true) @PathVariable("id") String id) {
-        if(getObjectMapper().isPresent() && getAcceptHeader().isPresent()) {
-        } else {
-            log.warn("ObjectMapper or HttpServletRequest not configured in default TitulosApi interface so no example is generated");
-        }
-        return new ResponseEntity<>(HttpStatus.NOT_IMPLEMENTED);
-    }
+	@ApiOperation(value = "Serviço para realizar lançamentos de despesas do mes", nickname = "deleteLancamentosTitulo", notes = "", tags = {
+			"Titulos", })
+	@ApiResponses(value = { @ApiResponse(code = 200, message = "Sucesso") })
+	@RequestMapping(value = "/titulos/lancamentos/{tipo}/{id}", method = RequestMethod.DELETE)
+	default ResponseEntity<Void> deleteLancamentosTitulo(
+			@ApiParam(value = "", required = true) @PathVariable("tipo") Integer tipo,
+			@ApiParam(value = "", required = true) @PathVariable("id") String id) {
+		if (getObjectMapper().isPresent() && getAcceptHeader().isPresent()) {
+		} else {
+			log.warn(
+					"ObjectMapper or HttpServletRequest not configured in default TitulosApi interface so no example is generated");
+		}
+		return new ResponseEntity<>(HttpStatus.NOT_IMPLEMENTED);
+	}
 
+	@ApiOperation(value = "Serviço para realizar lançamentos de despesas do mes", nickname = "lancamentosTitulo", notes = "", response = LancamentoMes.class, responseContainer = "List", tags = {
+			"Titulos", })
+	@ApiResponses(value = {
+			@ApiResponse(code = 200, message = "Sucesso", response = LancamentoMes.class, responseContainer = "List") })
+	@RequestMapping(value = "/titulos/lancamentos/{tipo}/{ano}/{mes}", produces = {
+			"application/json" }, method = RequestMethod.GET)
+	default ResponseEntity<List<LancamentoMes>> lancamentosTitulo(
+			@ApiParam(value = "", required = true) @PathVariable("tipo") Integer tipo,
+			@ApiParam(value = "", required = true) @PathVariable("ano") Integer ano,
+			@ApiParam(value = "", required = true) @PathVariable("mes") Integer mes) {
+		if (getObjectMapper().isPresent() && getAcceptHeader().isPresent()) {
+		} else {
+			log.warn(
+					"ObjectMapper or HttpServletRequest not configured in default TitulosApi interface so no example is generated");
+		}
+		return new ResponseEntity<>(HttpStatus.NOT_IMPLEMENTED);
+	}
 
-    @ApiOperation(value = "Serviço para realizar lançamentos de despesas do mes", nickname = "lancamentosTitulo", notes = "", response = LancamentoMes.class, responseContainer = "List", tags={ "Titulos", })
-    @ApiResponses(value = { 
-        @ApiResponse(code = 200, message = "Sucesso", response = LancamentoMes.class, responseContainer = "List") })
-    @RequestMapping(value = "/titulos/lancamentos/{tipo}/{ano}/{mes}",
-        produces = { "application/json" }, 
-        method = RequestMethod.GET)
-    default ResponseEntity<List<LancamentoMes>> lancamentosTitulo(@ApiParam(value = "",required=true) @PathVariable("tipo") Integer tipo,@ApiParam(value = "",required=true) @PathVariable("ano") Integer ano,@ApiParam(value = "",required=true) @PathVariable("mes") Integer mes) {
-        if(getObjectMapper().isPresent() && getAcceptHeader().isPresent()) {
-        } else {
-            log.warn("ObjectMapper or HttpServletRequest not configured in default TitulosApi interface so no example is generated");
-        }
-        return new ResponseEntity<>(HttpStatus.NOT_IMPLEMENTED);
-    }
-
-
-    @ApiOperation(value = "Serviço para realizar lançamentos de despesas do mes", nickname = "postLancamentosTitulo", notes = "", tags={ "Titulos", })
-    @ApiResponses(value = { 
-        @ApiResponse(code = 200, message = "Sucesso") })
-    @RequestMapping(value = "/titulos/lancamento",
-        consumes = { "application/json" },
-        method = RequestMethod.POST)
-    default ResponseEntity<Void> postLancamentosTitulo(@ApiParam(value = "" ,required=true )  @Valid @RequestBody LancamentoMes body) {
-        if(getObjectMapper().isPresent() && getAcceptHeader().isPresent()) {
-        } else {
-            log.warn("ObjectMapper or HttpServletRequest not configured in default TitulosApi interface so no example is generated");
-        }
-        return new ResponseEntity<>(HttpStatus.NOT_IMPLEMENTED);
-    }
-
-
-    @ApiOperation(value = "Serviço para realizar lançamentos de despesas do mes", nickname = "putLancamentosTitulo", notes = "", tags={ "Titulos", })
-    @ApiResponses(value = { 
-        @ApiResponse(code = 200, message = "Sucesso") })
-    @RequestMapping(value = "/titulos/lancamento/{id}",
-        method = RequestMethod.PUT)
-    default ResponseEntity<Void> putLancamentosTitulo(@ApiParam(value = "",required=true) @PathVariable("id") String id) {
-        if(getObjectMapper().isPresent() && getAcceptHeader().isPresent()) {
-        } else {
-            log.warn("ObjectMapper or HttpServletRequest not configured in default TitulosApi interface so no example is generated");
-        }
-        return new ResponseEntity<>(HttpStatus.NOT_IMPLEMENTED);
-    }
+	@ApiOperation(value = "Serviço para realizar lançamentos de despesas do mes", nickname = "putLancamentosTitulo", notes = "", tags = {
+			"Titulos", })
+	@ApiResponses(value = { @ApiResponse(code = 200, message = "Sucesso") })
+	@RequestMapping(value = "/titulos/lancamentos/{tipo}", consumes = {
+			"application/json" }, method = RequestMethod.PUT)
+	default ResponseEntity<Void> putLancamentosTitulo(
+			@ApiParam(value = "", required = true) @Valid @RequestBody LancamentoMes body,
+			@ApiParam(value = "", required = true) @PathVariable("tipo") Integer tipo) {
+		if (getObjectMapper().isPresent() && getAcceptHeader().isPresent()) {
+		} else {
+			log.warn(
+					"ObjectMapper or HttpServletRequest not configured in default TitulosApi interface so no example is generated");
+		}
+		return new ResponseEntity<>(HttpStatus.NOT_IMPLEMENTED);
+	}
 
 }
